Added text in 'Peaks overlaps' section.

--- a/Latex/kursinis_darbas.tex
+++ b/Latex/kursinis_darbas.tex
@@ -204,11 +204,16 @@ pritaikyta atskiroms chromosomoms, kurių pozicijos aprašytos GRanges
 objekte.
 Kiekvieno mėginio \emph{Tbx5} transkripcijos faktoriaus pasiskirstymas
 chromosomose atvaizduotas su \emph{ggplot2} biblioteka, panaudojus
-papildomą funkciją \emph{facet\_wrap()}, sukuriančia grafikus visoms
-chromosomoms.
+papildomą funkciją \emph{facet\_wrap()}, sukuriančia atskirus 
+grafikus chromosomoms.
 
 \subsection{Persidengiančių regionų mėginiuose analizė}
-Tekstas.
+Persidengiančių regionų tarp mėginių procentinė dalis apskaičiuota
+su \emph{Jaccard()} funkcija, apskaičiuojančia, kiek yra sutampančių
+regionų tarp dviejų mėginių poros.
+Gauti rezultatai atvaizduoti spalvų intensyvumo grafike \emph{angl.
+heatmap}, sukurtame \emph{ggplot2} bibliotekos funkciją \emph{ggplot}
+papildžius funkcija \emph{geom\_tile()}.
 
 \subsection{\emph{Tbx5} motyvo nustatymas}
 Tekstas.
