--- a/peaks_MM.Rmd
+++ b/peaks_MM.Rmd
@@ -62,9 +62,10 @@ bplot1 <- ggplot(peaks, aes(x = peaks$Experiment, y = peaks$Peak_count)) +
                          color = "black", fill = col_fill) +
                 geom_text(aes(label = peaks$Peak_count),
                           position = position_dodge(width = 0.9), vjust = -0.25) +
-                labs(title = "Peak counts within experiments", x = "Experiment",
-                     y = "Peak counts")
+                labs(title = "Regionų skaičius mėginiuose",
+                     x = "Eksperimentas", y = "Regionų skaičius")
 
+png(file = "Latex/Figures/total_peak_counts.png")
 bplot1 + theme(
     panel.background = element_rect(fill = "#eeeef1", colour = "#4c0001"),
     panel.grid.major.y = element_line(colour = "#cab5b5", size = 0.3,
@@ -75,9 +76,10 @@ bplot1 + theme(
                                       linetype = "longdash"),
     panel.grid.minor.x = element_line(colour = "#cab5b5", size = 0.2,
                                       linetype = "longdash"),
-    axis.text.x = element_text(angle = 45, hjust = 1),
+    axis.text.x = element_text(angle = 45, hjust = 0.5, vjust = 0.5),
     plot.title = element_text(hjust = 0.5, face = "bold"))
 
+dev.off()
 
 # Determining which experiment has a maximum peak count:
 max_count <- peaks[which.max(peaks$Peak_count), ]
@@ -90,145 +92,3 @@ detected in the cells that were analyzed in
 The smallest number of *Tbx5* gene peaks was observed in the dataset that was
 retrieved from ***```r min_count```*** experiment.
 
-### Peak counts by chromosome
-
-The barcharts below show how peak counts are distributed within
-different chromosomes. Each bar represents separate experiment.
-
-```{r fig2, fig2.align = "center"}
-peak_counts <- data.frame(matrix(ncol = 3, nrow = 0)) %>%
-                    setNames(., c("Name", "Chromosome", "Peak_count"))
-
-count_peaks <- function(name, objects) {
-    for (chr in chr_abr) {
-        peaks <- objects[[name]] %>%
-                    filter(seqnames == chr) %>%
-                    length()
-        peak_counts[nrow(peak_counts) + 1,] = c(name, chr, peaks)
-    }
-    return(peak_counts)
-}
-
-peak_counts <- lapply(names(grl), count_peaks, objects = grl) %>% bind_rows()
-
-cas <- unique(peak_counts$Chromosome)
-peak_counts$Chromosome <- factor(peak_counts$Chromosome, levels = c(cas))
-
-col_fill <- randomColor(1, hue = "red", luminosity = "dark")
-
-# Pastaba: būtina pridėti 'as.numeric', nes kitu atveju Peak_count yra
-# traktuojamas kaip 'string' - stulpelių dydžiai atvaizduojami leksikografiškai -
-# gaunamas klaidingas atvaizdavimas (pvz. 67 reikšmę atvaizduojantis stulpelis yra
-# daug didesnis už stulpelį, kuris atvaizduoja 2948)!
-
-bplot2 <- ggplot(peak_counts, aes(x = Name, y = as.numeric(Peak_count))) +
-            geom_bar(stat = "identity", color = "black", fill = col_fill) +
-            facet_wrap(~ Chromosome) +
-            theme(legend.position = "none") +
-            xlab("Peak distribution within chromosomes") +
-            ylab("Peaks") +
-            ylim(0, 15000) +
-            geom_text(aes(label = paste0(as.numeric(Peak_count)),
-                          y = as.numeric(Peak_count)), vjust = -1, hjust = .5,
-                          size = 3, angle = 0, color = "black")
-
-bplot2 + theme_linedraw() +
-theme(axis.text.x = element_text(angle = 90, size = 8, hjust = 1),
-      axis.title.x = element_text(size = 14, colour = "black"),
-      axis.title.y = element_text(size = 14, colour = "black"))
-```
-
-### Peak overlaps between samples
-The heatmap below helps to indicate the biggest number of peak overlaps between 7
-experiments.\
-
-```{r}
-coef_matrix <- matrix(nrow = length(grl), ncol = length(grl))
-
-jaccard <- function(a, b) {
-    len <- reduce(c(grl[[a]], grl[[a]])) %>% length()
-    return((length(GenomicRanges::intersect(grl[[a]], grl[[b]])) / len) * 100)
-}
-
-for (i in 1:length(grl)) {
-    for (y in 1:length(grl)) {
-        coef_matrix[i, y] = jaccard(i, y)
-    }
-}
-
-colnames(coef_matrix) <- names(grl)
-rownames(coef_matrix) <- names(grl)
-
-coef_mat1 <- coef_matrix
-coef_mat2 <- coef_matrix
-
-coef_mat1[lower.tri(coef_mat1, diag = TRUE)] <- NA
-coef_mat2[upper.tri(coef_mat2, diag = TRUE)] <- NA
-
-coef_mat_bind = rbind(data.matrix(coef_mat1), data.matrix(coef_mat2))
-melt_coef_mat <- melt(coef_mat_bind, na.rm = TRUE)
-
-ggplot(melt_coef_mat, aes(x = Var2, y = Var1, fill = value)) +
-    geom_tile(color = "black") +
-    geom_text(aes(label = round(value, digits = 5)),
-                  color = "#030101", size = 4) +
-    labs(title = "Peak overlaps between samples",
-         x = "Experiment", y = "Experiment") +
-    scale_fill_gradient(low = "#ffee8e", high = "#ab1f1f") +
-    guides(fill = guide_colourbar(title = "Coefficient", face = "bold")) +
-    theme(axis.text = element_text(size = 10, colour = "black"),
-          axis.text.x = element_text(angle = 45, hjust = 1),
-          axis.title.x = element_text(size = 14, colour = "black"),
-          axis.title.y = element_text(size = 14, colour = "black"),
-          panel.grid.major = element_line(color = "#eeeeee"),
-          plot.title = element_text(hjust = 0.5, size = 16, face = "bold"))
-```
-
-### Motif determination using PWM matrix
-The following analysis is focused on analysing the sequences based on the
-peaks and trying to determine Tbx5 motifs using PWM matrix.
-
-```{r}
-#"BSgenome.Mmusculus.UCSC.mm10"                      
-#"BSgenome.Mmusculus.UCSC.mm10.masked" 
-
-#mpwm <- read.table("TBX5_MOUSE.H11MO.0.D.pwm")
-#mpwm <- t(mpwm)
-#rownames(mpwm) <- c("A","C","G","T")
-#mpwm
-#ggseqlogo(mpwm)
-#########################################################
-
-# Calculating Tbx5 hits within fetched fasta files of peaks:
-pth_fasta <- "../FASTA/"
-peak_sequences <- list.files(path = pth_fasta, "*fasta")
-hit_vec <- c()
-
-find_motif_hits <- function(sequences) {
-    for (i in 1:length(sequences)) {
-        #hits <- countPWM(as.matrix(mpwm), sequences[[i]], min.score = "75%")
-        #if (hits == 0) { next }
-        #else { hit_vec <- c(hit_vec, hits) }
-        name <- paste0(tools::file_path_sans_ext(sequences[[i]]), ".bb")
-        file <- import(paste0("../BigBed/", name)) %>% filter(seqnames %in% chr_abr)
-        lens <- paste0("Mėginio ", name, " ilgis yra = ", length(file))
-    }
-    return(lens)
-}
-
-
-for (i in 1:length(peak_sequences)) {
-    filename <- peak_sequences[i]
-    seq <- readDNAStringSet(paste0("../FASTA/", filename))
-    #print(paste0(peak_sequences[i], " turi ", find_motif_hits(seq), " atitikimų."))
-    print(find_motif_hits(filename))
-}
-```
-
-```{r PWM_matching}
-#mpwm <- read.table("TBX5_MOUSE.H11MO.0.D.pwm")
-#mpwm <- t(mpwm)
-#rownames(mpwm) <- c("A","C","G","T")
-#mpwm
-
-```
