--- a/peaks_MM.Rmd
+++ b/peaks_MM.Rmd
@@ -62,7 +62,7 @@ bplot1 <- ggplot(peaks, aes(x = peaks$Experiment, y = peaks$Peak_count)) +
                          color = "black", fill = col_fill) +
                 geom_text(aes(label = peaks$Peak_count),
                           position = position_dodge(width = 0.9), vjust = -0.25) +
-                labs(x = "Eksperimentas", y = "Regionų skaičius")
+                labs(x = "Mėginys", y = "Regionų skaičius")
 
 png(file = "Latex/Figures/total_peak_counts.png")
 
@@ -128,17 +128,71 @@ bplot2 <- ggplot(peak_counts, aes(x = Name, y = as.numeric(Peak_count))) +
             facet_wrap(~ Chromosome) +
             theme(legend.position = "none") +
             ylab("Regionų skaičius") +
+            xlab("") +
             ylim(0, 20000) +
             geom_text(aes(label = paste0(as.numeric(Peak_count)),
                           y = as.numeric(Peak_count)), vjust = -1, hjust = .5,
                           size = 2, angle = 0, color = "black")
 
-png(file = "Latex/Figures/peak_counts_by_chromosome.png")
+png(file = "Latex/Figures/peak_counts_by_chromosome.png", width = 600, height = 500)
 
 bplot2 + theme_linedraw() +
 theme(axis.text.x = element_text(angle = 90, size = 6, hjust = 1),
+      axis.text.y = element_text(angle = 0, size = 6, hjust = 1),
       axis.title.x = element_text(size = 14, colour = "black"),
       axis.title.y = element_text(size = 14, colour = "black"))
 
+dev.off()
+```
+
+### Peak overlaps between samples
+The heatmap below helps to indicate the biggest number of peak overlaps between 7
+experiments.\
+
+```{r}
+coef_matrix <- matrix(nrow = length(grl), ncol = length(grl))
+
+jaccard <- function(a, b) {
+    len <- reduce(c(grl[[a]], grl[[a]])) %>% length()
+    return((length(GenomicRanges::intersect(grl[[a]], grl[[b]])) / len) * 100)
+}
+
+for (i in 1:length(grl)) {
+    for (y in 1:length(grl)) {
+        coef_matrix[i, y] = jaccard(i, y)
+    }
+}
+
+colnames(coef_matrix) <- names(grl)
+rownames(coef_matrix) <- names(grl)
+
+coef_mat1 <- coef_matrix
+coef_mat2 <- coef_matrix
+
+coef_mat1[lower.tri(coef_mat1, diag = TRUE)] <- NA
+coef_mat2[upper.tri(coef_mat2, diag = TRUE)] <- NA
+
+coef_mat_bind = rbind(data.matrix(coef_mat1), data.matrix(coef_mat2))
+melt_coef_mat <- melt(coef_mat_bind, na.rm = TRUE)
+
+overlaps <- ggplot(melt_coef_mat, aes(x = Var2, y = Var1, fill = value)) +
+                geom_tile(color = "black") +
+                geom_text(aes(label = round(value, digits = 3)),
+                          color = "#030101", size = 4) +
+                labs(x = "Mėginys", y = "Mėginys") +
+                scale_fill_gradient(low = "#ffee8e", high = "#ab1f1f") +
+                guides(fill = guide_colourbar(title = "Koeficientas",
+                       face = "bold")) +
+                theme(axis.text = element_text(size = 10, colour = "black"),
+                      axis.text.x = element_text(angle = 45, hjust = 0.5,
+                                                 vjust = 0.5),
+                      axis.title.x = element_text(size = 14, colour = "black"),
+                      axis.title.y = element_text(size = 14, colour = "black"),
+                      panel.grid.major = element_line(color = "#eeeeee"),
+                      plot.title = element_text(hjust = 0.5, size = 16,
+                      face = "bold"))
+
+png(file = "Latex/Figures/peak_overlaps_between_samples.png", width = 600)
+overlaps
 dev.off()
 ```
