Added more descriptions.

--- a/Latex/kursinis_darbas.tex
+++ b/Latex/kursinis_darbas.tex
@@ -55,17 +55,17 @@
     {\bf \Large Research of the \emph{tbx5} and \emph{tcf21} genes' functions in regeneration}
 \end{center}
 \vskip 20pt
-\centerline{\bf \Large \textbf{Kursinis darbas}}
+\centerline{\bf \large \textbf{Kursinis darbas}}
 \bigskip
 \vskip 50pt
 
-\hskip 140pt {\Large Autorius: Danielė Stasiūnaitė}
+\hskip 140pt {\large Autorius: Danielė Stasiūnaitė}
 
-\hskip 140pt{\Large VU el. p.: (daniele.stasiunaite@mif.stud.vu.lt)}
+\hskip 140pt{\large VU el. p.: (daniele.stasiunaite@mif.stud.vu.lt)}
 \bigskip
 \vskip 20pt
 
-\hskip 140pt {\Large Darbo vadovas: J. Asist. Kotryna Kvederavičiūtė}
+\hskip 140pt {\large Darbo vadovas: J. Asist. Kotryna Kvederavičiūtė}
 \vskip 60pt
 \vskip 60pt
 \centerline{\large \textbf{Vilnius}}
@@ -254,7 +254,7 @@ Tekstas.
 % REGIONŲ SKAIČIUS MĖGINIUOSE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Rezultatų apžvalga}
-\subsection{Regionų skaičiaus skirtumai tarp mėginių}
+\subsection{Regionų skaičiaus skirtumai mėginiuose}
 Pirmajame analizės etape kiekviename mėginyje nustatytas bendras
 regionų skaičius pavaizduotas žemiau esančioje stulpelinėje
 diagramoje.
@@ -296,7 +296,7 @@ mažą įtaką transkripcijos faktoriaus pasireiškimui.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % REGIONŲ SKAIČIUS ATSKIROSE CHROMOSOMOSE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Regionų pasiskirstymas atskirose chromosomose}
+\subsection{Regionų pasiskirstymas chromosomose}
 Nustačius \emph{tbx5} transkripcijos faktoriaus regionų
 pasiskirstymą eksperimentų mėginiuose, kitame analizės etape
 patikrinta, kaip faktoriaus regionai pasiskirstę atskirose
@@ -328,7 +328,11 @@ regionų skaičius nustatomas penktojoje chromosomoje.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % TARP MĖGINIŲ PERSIDENGIANTYS REGIONAI
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\subsection{Tarp mėginių persidengiantys regionai}
+Dažnai siekiant nustatyti mėginių panašumą, yra tiriama, kokia
+mėginių duomenų dalis persidengia. Žemiau pateikiamame spalvų
+intensyvumo grafike vaizduojama tarp mėginių persidengiančių
+transkripcijos faktoriaus regionų procentinė dalis.
 
 \begin{figure}[htb]
     \begin{center}
@@ -336,6 +340,16 @@ regionų skaičius nustatomas penktojoje chromosomoje.
         \caption*{3 pav. Persidengiančių regionų procentinės dalies vaizdavimas}
     \end{center}
 \end{figure}
+
+Didžiausiausi persidengiančių regionų procentai nustatyti tarp
+šių mėginių:
+\begin{itemize}
+    \item \textbf{81.577 \%}
+    \item \textbf{81.092 \%}
+    \item \textbf{77.827 \%}
+    \item \textbf{76.948 \%}
+    \item \textbf{75.439 \%}
+  \end{itemize}
 
 \newpage
 
